Update .env exmaple configuration defaults Resolve alignment of content where container class is applied:   - Add wrapper on c-table in order to apply background color for matching structure of c-AppBanner   - Remove margin on mobile of login #141

--- a/src/styles/components/login.styl
+++ b/src/styles/components/login.styl
@@ -4,8 +4,6 @@
   border-radius 10px
   color $col-deep-green
   padding 1rem
-  +sm()
-    margin 1rem
   &.alert-danger
     .c-login__txt
       border-color $col-blush
