--- a/src/styles/components/table.styl
+++ b/src/styles/components/table.styl
@@ -18,9 +18,10 @@
         margin-left 0
 
   &--data
-    background-color white
-    border-radius 8px
     margin-top 2rem
+    .c-table__wrap
+      background-color white
+      border-radius 8px
 
   &--main
     margin-top -3rem
